# traffic-sim

./: ARCHITECTURE.md  Cargo.toml  cars.toml  readme.md  route.toml  route2.toml  route3.toml
benches/: simulation_performance.rs
src/: lib.rs  main.rs  main_simple.rs
src/compute/: cpu.rs  gpu.rs  mod.rs
src/config/: cars.rs  mod.rs  route.rs
src/graphics/: mod.rs  renderer.rs  ui.rs  viewport.rs
src/simulation/: behavior.rs  mod.rs  physics.rs  traffic.rs
tests/: backend_consistency.rs
