[package]
name = "traffic-sim"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "GPU-accelerated traffic simulation with interactive visualization"
license = "MIT OR Apache-2.0"

[dependencies]
# Graphics and windowing (always enabled)
wgpu = "0.20"
winit = "0.29"
vello = "0.2"
kurbo = "0.11"        # 2D curves and shapes (used by Vello)
bytemuck = { version = "1.14", features = ["derive"] }

# OpenCL for GPU compute acceleration
opencl3 = "0.10"
ocl = "0.19"

# Configuration and serialization  
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Mathematics and physics
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"

# Performance monitoring
instant = "0.1"       # Cross-platform timing

# Async runtime (always enabled)
tokio = { version = "1.0", features = ["full"] }
pollster = "0.3"      # Simple async executor

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# No features needed - everything is always available

[[bin]]
name = "traffic-sim"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1         # Some optimization for better dev experience

[dev-dependencies]
criterion = "0.5"     # Benchmarking

[[bench]]
name = "simulation_performance"
harness = false
